client/deploy/deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: frontend-dep
spec:
  selector:
    matchLabels:
      app: defi
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: defi
        tier: frontend
    spec:
      containers:
      - name: frontend-cont
        image: nrvinay08/defi-frontend:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3000
---
