client/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: defi
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: defi
    tier: frontend
---
